	* BUGFIX - Gradient preview now properly shows effect of mask channel on alpha channel
	* BUGFIX - Alt+S key now opens Selection menu as it should
	* BUGFIX - Directory for animation frames is created relative to layers file, as it should be
	* BUGFIX - Saving animation frames in PNG format doesn't cause crash

3.21	2008-6-8

	* Russian translation added by Sergey Irupin
	* Spanish translation updated by Antonio Sanchez Leon
	* Galician translation added by Miguel Anxo Bouzada
	* Use 'xdg-open' if available to open HTML help in default browser on Linux
	* Relaxed sanity checking in XPM loader to accept files with malformed headers
	* "Exact Conversion" option added to Palette->Create Quantized
	* Counting used colours now about twice as fast
	* Workaround for bug in libpng versions 1.2.17 - 1.2.24 added (was losing extra channels when loading)
	* BUGFIX - Canvas, view and palette area borders now can't be messed up by theme engines
        * BUGFIX - Persistent rectangle selection now doesn't steal arrow keys from gradient placement tool
	* BUGFIX - Internationalization now works properly in GTK+1
	* BUGFIX - FreeType text rendering quality improved on Windows
	* BUGFIX - Text in active menu items no longer becomes invisible on Windows Vista (fixed in GTK+)
	* BUGFIX - Removable drives are now visible in fileselector on Windows (fixed in GTK+)

3.20	2007-12-27

	* mtPaint is now licensed as GPL version 3 (or later)
	* Chinese (Simplified) added by puppychinese(Cecc)
	* Japanese translation added by Norihiro YONEDA
	* Polish translation updated by Groszek150(LucaS)
	* FreeType text pasting facility added
	* Actions section added to File menu
	* Sharper image reduction toggle added to "Scale Canvas"
	* Spacing for non-continuous tools is now configurable - right click the continuous mode toggle
	* "Blend" drawing mode added
	* "Unassociate Alpha" operation added to Channels menu
	* Palette is now stored in RGB PNG files
	* PNG compression level made configurable